Name:                treemap-directory-viewer
Version:             0.1
Homepage:            https://github.com/mathfur
License:             MIT
License-file:        LICENSE
Author:              mathfuru

Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.14

Executable treemap-directory-viewer
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base == 4.5.*
                   , text == 0.11.3.1
                   , bytestring == 0.9.2.1
                   , hamlet ==1.1.7.1
                   , blaze-markup == 0.5.1.5
                   , aeson == 0.6.1.0
                   , cmdargs == 0.9.3
                   , directory == 1.1.0.2
                   , filepath == 1.3.0.0
  ghc-options:       -Wall
  default-language:  Haskell2010
